[package]
name = "adyen-bin-lookup"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Placeholder for adyen-bin-lookup"

[dependencies]
adyen-core = { path = "../adyen-core" }
