[package]
name = "adyen-checkout"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Adyen Checkout API v71 for payment processing"

[dependencies]
adyen-core = { path = "../adyen-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
