[package]
name = "adyen-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core types and utilities for the Adyen Rust library"
keywords.workspace = true
categories.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
rkyv = ["dep:rkyv"]
observability = ["tracing", "metrics"]

[dependencies]
# Serialization
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rkyv = { workspace = true, optional = true }

# Performance and ergonomics
smallvec = { workspace = true }
compact_str = { workspace = true }

# Types and utilities
chrono = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

# Error handling and validation
thiserror = { workspace = true }
validator = { workspace = true }

# HTTP client
reqwest = { workspace = true }
tokio = { workspace = true }

# Cryptography
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

# Optional observability
tracing = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }