[package]
name = "adyen-legal-entity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Adyen Legal Entity API v3 for KYC and onboarding workflows"

[dependencies]
adyen-core = { path = "../adyen-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
