[package]
name = "adyen-management"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Adyen Management API v3 for account and terminal management"

[lints]
workspace = true

[dependencies]
adyen-core = { path = "../adyen-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
