[package]
name = "adyen-payments"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Placeholder for adyen-payments"

[dependencies]
adyen-core = { path = "../adyen-core" }
