[package]
name = "adyen-payout"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Adyen Payout API v68 for fund disbursement and payout management"

[dependencies]
adyen-core = { path = "../adyen-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"