[package]
name = "adyen-stored-value"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Placeholder for adyen-stored-value"

[dependencies]
adyen-core = { path = "../adyen-core" }
